exec/ut_evolution_err_log.txt
Processing plotEvolution.cc++("../ut/ut_evolution.root", "ut_evolution.pdf", "ut")
...
Info in <TUnixSystem::ACLiC>: creating shared library /nfs/dust/cms/user/zimermma/EFTfitter/exec/./plotEvolution_cc.so
Warning in cling::IncrementalParser::CheckABICompatibility():
  Possible C++ standard library mismatch, compiled with __GLIBCXX__ '20170814'
  Extraction of runtime standard library version was: '20180125'
In file included from input_line_12:9:
././plotEvolution.cc:90:35: error: use of overloaded operator '+' is ambiguous (with operand types 'basic_string<char, std::char_traits<char>, std::allocator<char> >' and '__gnu_cxx::__alloc_traits<std::allocator<int>
      >::value_type' (aka 'int'))
    key = (isAll) ? key + "_all_" + v_index.at(iI) : key + "_linear_" + v_index.at(iI);
                    ~~~~~~~~~~~~~ ^ ~~~~~~~~~~~~~~
/cvmfs/sft.cern.ch/lcg/releases/ROOT/6.12.04-cd498/x86_64-centos7-gcc7-opt/include/TString.h:134:16: note: candidate function
friend TString operator+(const TString &s, char c);
               ^
/cvmfs/sft.cern.ch/lcg/releases/ROOT/6.12.04-cd498/x86_64-centos7-gcc7-opt/include/TString.h:135:16: note: candidate function
friend TString operator+(const TString &s, Long_t i);
               ^
/cvmfs/sft.cern.ch/lcg/releases/ROOT/6.12.04-cd498/x86_64-centos7-gcc7-opt/include/TString.h:136:16: note: candidate function
friend TString operator+(const TString &s, ULong_t i);
               ^
/cvmfs/sft.cern.ch/lcg/releases/ROOT/6.12.04-cd498/x86_64-centos7-gcc7-opt/include/TString.h:137:16: note: candidate function
friend TString operator+(const TString &s, Long64_t i);
               ^
/cvmfs/sft.cern.ch/lcg/releases/ROOT/6.12.04-cd498/x86_64-centos7-gcc7-opt/include/TString.h:138:16: note: candidate function
friend TString operator+(const TString &s, ULong64_t i);
               ^
/cvmfs/sft.cern.ch/lcg/releases/ROOT/6.12.04-cd498/x86_64-centos7-gcc7-opt/include/TString.h:131:16: note: candidate function
friend TString operator+(const TString &s1, const TString &s2);
               ^
In file included from input_line_12:9:
././plotEvolution.cc:90:71: error: use of overloaded operator '+' is ambiguous (with operand types 'basic_string<char, std::char_traits<char>, std::allocator<char> >' and '__gnu_cxx::__alloc_traits<std::allocator<int>
      >::value_type' (aka 'int'))
    key = (isAll) ? key + "_all_" + v_index.at(iI) : key + "_linear_" + v_index.at(iI);
                                                     ~~~~~~~~~~~~~~~~ ^ ~~~~~~~~~~~~~~
/cvmfs/sft.cern.ch/lcg/releases/ROOT/6.12.04-cd498/x86_64-centos7-gcc7-opt/include/TString.h:134:16: note: candidate function
friend TString operator+(const TString &s, char c);
               ^
/cvmfs/sft.cern.ch/lcg/releases/ROOT/6.12.04-cd498/x86_64-centos7-gcc7-opt/include/TString.h:135:16: note: candidate function
friend TString operator+(const TString &s, Long_t i);
               ^
/cvmfs/sft.cern.ch/lcg/releases/ROOT/6.12.04-cd498/x86_64-centos7-gcc7-opt/include/TString.h:136:16: note: candidate function
friend TString operator+(const TString &s, ULong_t i);
               ^
/cvmfs/sft.cern.ch/lcg/releases/ROOT/6.12.04-cd498/x86_64-centos7-gcc7-opt/include/TString.h:137:16: note: candidate function
friend TString operator+(const TString &s, Long64_t i);
               ^
/cvmfs/sft.cern.ch/lcg/releases/ROOT/6.12.04-cd498/x86_64-centos7-gcc7-opt/include/TString.h:138:16: note: candidate function
friend TString operator+(const TString &s, ULong64_t i);
               ^
/cvmfs/sft.cern.ch/lcg/releases/ROOT/6.12.04-cd498/x86_64-centos7-gcc7-opt/include/TString.h:131:16: note: candidate function
friend TString operator+(const TString &s1, const TString &s2);
               ^
In file included from input_line_12:9:
././plotEvolution.cc:131:3: error: no matching function for call to 'axisPlot'
  axisPlot(g_sig1.get(),
  ^~~~~~~~
/nfs/dust/cms/user/zimermma/EFTfitter/exec/../src/PlotUtil.h:158:6: note: candidate function template not viable: requires 15 arguments, but 13 were provided
void axisPlot(Plot *plot,
     ^
Error in <ACLiC>: Dictionary generation failed!
